# codecraft

./: .gitignore  .pre-commit-config.yaml  AUDIT.md  LICENSE  README.md  _audit.py  _debug_debt.py  _debug_test.py  pyproject.toml  test_output.txt
.github/workflows/: ci.yml  scan.yml
.hooks/: codecraft-scan.py
extension/: extension.js  package.json
src/codecraft/: __main__.py
src/codecraft/cli/: app.py  dashboard.py  debt.py  deps.py  export_data.py  init_cmd.py  learn.py  practice.py  precommit_hook.py  profile_cmd.py  progress.py  remix.py  scan.py  schedule.py  start_wizard.py  stats_cmd.py  suggest.py  sync_cmd.py  vacuum.py
src/codecraft/db/: connection.py  migrations.py  repository.py
src/codecraft/db/repos/: card_repo.py  challenge_repo.py  concept_repo.py  debt_repo.py  file_repo.py  settings_repo.py
src/codecraft/domains/: __init__.py  registry.py
src/codecraft/domains/pools/: audio.py  bioinfo.py  cli_tools.py  compilers.py  crypto.py  data_viz.py  education.py  finance.py  gaming.py  health.py  image.py  iot.py  networking.py  nlp.py  science.py  simulation.py  sports_cricket.py  sysadmin.py  travel.py  web_scraping.py
src/codecraft/engines/: debt_tracker.py  remix.py  scheduler.py  templates.py
src/codecraft/models/: __init__.py  challenge.py  concept.py  debt.py  file.py  review.py
src/codecraft/scanner/: ast_parser.py  complexity.py  concept_extractor.py  debt_detector.py  fingerprint.py  import_analyzer.py  unified.py
src/codecraft/scanner/multilang/: __init__.py  base_ts.py  detector.py  go_parser.py  java_parser.py  parser.py  python_parser.py  rst_parser.py  scanner.py  ts_parser.py
src/codecraft/utils/: colors.py  i18n.py
tests/: conftest.py  test_smoke.py
tests/fixtures/: advanced.py  beginner.py  intermediate.py
tests/test_cli/: test_practice.py  test_precommit.py  test_progress.py  test_schedule.py
tests/test_db/: test_connection.py  test_debt_model.py  test_domain_pools.py  test_domain_registry.py  test_repository.py  test_repository_extended.py  test_review.py
tests/test_engines/: test_debt_tracker.py  test_remix.py  test_scheduler.py  test_scheduler_full.py  test_templates.py
tests/test_features/: test_new_features.py  test_sync_profile.py
tests/test_performance/: test_benchmarks.py
tests/test_scanner/: test_ast_parser.py  test_complexity.py  test_concept_edge.py  test_concept_extractor.py  test_debt_detector.py  test_debt_detector_full.py  test_multilang.py  test_multilang_scanner.py  test_unified.py  test_unified_extended.py
tests/test_utils/: test_colors.py  test_i18n.py  test_main_module.py
