[project]
name = "codecraft-cli"
version = "0.1.0"
description = "Your personal Python skill forge — scans your code, finds gaps, generates challenges, and schedules reviews using spaced repetition."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Rudra Khairnar", email = "rudrakhairnar16@gmail.com" },
]
keywords = ["codecraft", "learning", "spaced-repetition", "code-scanner", "python-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "duckdb>=1.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "watchdog>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/rudrakhairnar16-bit/codecraft"
Repository = "https://github.com/rudrakhairnar16-bit/codecraft"
"Bug Tracker" = "https://github.com/rudrakhairnar16-bit/codecraft/issues"

[project.optional-dependencies]
viz = ["graphviz>=0.20.0", "networkx>=3.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
codecraft = "codecraft.cli.app:app"

[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"src/codecraft/db/repository.py" = ["E501"]
"src/codecraft/domains/pools/*.py" = ["E501"]
"src/codecraft/scanner/debt_detector.py" = ["E501"]
"src/codecraft/cli/practice.py" = ["E501"]
"src/codecraft/cli/suggest.py" = ["E501"]
"src/codecraft/engines/templates.py" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: performance benchmark tests",
]

[tox]
legacy_tox_ini = """
[tox]
envlist = py310, py311, py312, lint
min_version = 4.0

[testenv]
deps =
    pytest>=8.0
    pytest-cov>=5.0
commands =
    pytest tests/ -q --tb=short {posargs}

[testenv:lint]
deps =
    ruff>=0.5.0
    mypy>=1.10.0
commands =
    ruff check src/
    mypy src/
"""
